--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -1,4 +1,24 @@
-@import "compass";
+/* borrowed from Compass */
+@mixin experimental($property, $value, $moz: true, $webkit: true, $o: true, $ms: true, $khtml: true, $official: true) {
+  @if $webkit {
+    -webkit-#{$property}: $value;
+  }
+  @if $khtml {
+    -khtml-#{$property}: $value;
+  }
+  @if $moz {
+    -moz-#{$property}: $value;
+  }
+  @if $ms {
+    -ms-#{$property}: $value;
+  }
+  @if $o {
+    -o-#{$property}: $value;
+  }
+  @if $official {
+    #{$property}: $value;
+  }
+}
 
 // set enhanced OpenType settings
 .book {
