--- a/src/sass/_figures.scss
+++ b/src/sass/_figures.scss
@@ -2,12 +2,12 @@ figure {
   text-align: center;
   margin: 0 auto $baseline*1em;
   max-width: 100%;
-}
 
-figure img {
-  max-width: 100%;
-  display: block;
-  margin: 0 auto;
+  img {
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+  }
 }
 
 figcaption {
