--- a/src/sass/_sections.scss
+++ b/src/sass/_sections.scss
@@ -2,10 +2,28 @@ section {
   margin: 0 0 $baseline*6.5em;
   padding: 0 0 $baseline*4em;
   border-bottom: 1px solid #fff;
-}
 
-section section:last-child {
-  margin-bottom: 0;
-  padding-bottom: 0;
-  border-bottom: 0;
+  & section:last-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-bottom: 0;
+  }
+
+  @media print {
+    page-break-after: always;
+    page-break-after: right;
+    border-bottom: none;
+    padding-bottom: 0;
+
+    &:last-child,
+    & section {
+      page-break-after: auto;
+    }
+    & section {
+      padding-bottom: $baseline*2em;
+    }
+    & section > *:first-child {
+      page-break-before: avoid;
+    }
+  }
 }
