--- a/src/sass/_tables.scss
+++ b/src/sass/_tables.scss
@@ -1,14 +1,14 @@
 table {
   margin: $baseline*1em 0;
   font-feature-settings: "liga" 1, "kern" 1, "tnum" 1, "frac" 0;
-}
 
-table:first-child {
-  margin-top: 0;
-}
+  &:first-child {
+    margin-top: 0;
+  }
 
-table:last-child {
-  margin-bottom: 0;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 thead th, tbody {
