--- a/src/template.mustache
+++ b/src/template.mustache
@@ -29,6 +29,9 @@
 {{{style}}}
 </style>
 {{/style}}
+<!--[if lt IE 9]>
+<script src="static/html5shiv.js"></script>
+<![endif]-->
 </head>
 <body>
 <article class="book{{class}}">
