--- a/src/sass/_blockquotes.scss
+++ b/src/sass/_blockquotes.scss
@@ -5,7 +5,7 @@ blockquote {
   display: table;
   font-size: 1em / $scale;
   line-height: $baseline * $scale;
-  margin: $baseline*$scale*1em auto;
+  margin: 0 auto;
 
   .source {
     font-style: italic;
@@ -46,8 +46,6 @@ blockquote.poem {
   padding: 0;
   display: table;
   width: auto;
-  margin-left: auto;
-  margin-right: auto;
 
   .line {
     display: block;
