--- a/src/sass/_tables.scss
+++ b/src/sass/_tables.scss
@@ -1,18 +1,10 @@
 table {
-  margin: $baseline*1em 0;
+  margin: 0;
   font-feature-settings: "liga" 1, "kern" 1, "tnum" 1, "frac" 0;
-
-  &:first-child {
-    margin-top: 0;
-  }
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
 
 thead th, tbody {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid $c-shadow;
 }
 
 table:last-child tbody {
