--- a/src/sass/ebook.scss
+++ b/src/sass/ebook.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 /* the baseline height. 16px*1.5625 = 25px */
 $baseline: 1.5625;
 
@@ -12,12 +13,15 @@ $measure: 36;
 $c-hi: #A00;
 $c-background: darken(#FBFBFA, 1%);
 $c-shadow: #aaa;
+$c-copy: #222;
+
 
 @import "fonts";
 @import "normalize";
 
+
 .book {
-  color: #222;
+  color: $c-copy;
   font-family: "Crimson",Georgia,serif;
   font-size: 14px;
   line-height: $baseline;
@@ -66,6 +70,8 @@ $c-shadow: #aaa;
   }
 
   @import "counters";
+
+  @import "rhythm";
 
   @import "inlines";
 
