work on print CSS

--- a/src/sass/_counters.scss
+++ b/src/sass/_counters.scss
@@ -1,6 +1,6 @@
 
 & {
-  counter-reset: page chapter section global_section footnote;
+  counter-reset: page 1 chapter section global_section footnote;
 }
 
 > section {
