make <img> (kinda) responsive

--- a/src/sass/_inlines.scss
+++ b/src/sass/_inlines.scss
@@ -60,6 +60,12 @@ pre {
   white-space: pre-wrap;
 }
 
+img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+}
+
 a {
   color: $c-hi;
   text-decoration: none;
