--- a/src/template.mustache
+++ b/src/template.mustache
@@ -15,6 +15,8 @@
 {{/metadata}}
 <meta name="dc.type" content="Text" data-scheme="dc.DCMIType"/>
 <meta name="dc.format" content="application/xhtml+xml; charset=utf-8" data-scheme="dc.IMT"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<link rel="shortcut icon" href="static/favicon.ico"/>
 <link rel="dc.identifier" href="http://www.manuel-strehl.de/ebooks/{{enctitle}}"/>
 <link rel="dc.tableofContents" href="#Table_of_Contents"/>
 <link rel="schema.dc" href="http://purl.org/dc/terms/"/>
@@ -36,6 +38,6 @@
 <body>
 <article class="book{{class}}">
 {{{text}}}</article>
-<script src="static/ebook.js"></script>
+<script src="static/ebook.js" async="async"></script>
 </body>
 </html>
