--- a/src/template.mustache
+++ b/src/template.mustache
@@ -36,7 +36,7 @@
 <![endif]-->
 </head>
 <body>
-<article class="book{{class}}">
+<article class="book{{class}}" role="main">
 {{{text}}}</article>
 <script src="static/ebook.js" async="async"></script>
 </body>
