enhance metadata presentation

--- a/src/views/dialog_help.mustache
+++ b/src/views/dialog_help.mustache
@@ -59,7 +59,9 @@
 </table>
 </section>
 <section>
-<h3>{{#_}}Miscellaneous Settings{{/_}}</h3>
+<h3>{{#_}}Miscellaneous{{/_}}</h3>
 <p>{{#_}}Scroll direction:{{/_}} <strong>{{scrolldir}}</strong></p>
+<hr>
+<p>{{#_}}This ebook software is free and open source. You can find it on {{{source_link}}}. If you find any error in the book or the software, please report them!{{/_}}</p>
 </section>
 </div>
