--- a/src/index.mustache
+++ b/src/index.mustache
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="viewport" content="width=device-width">
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<meta name="theme_color" content="#303636">
 <link rel="stylesheet" href="static/ebook.css">
 <link rel="manifest" href="/manifest.json">
 <title>eBooks</title>
