--- a/src/index.mustache
+++ b/src/index.mustache
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<meta name="theme_color" content="#303636">
+<meta name="theme-color" content="#303636">
 <link rel="stylesheet" href="static/ebook.css">
 <link rel="manifest" href="/manifest.json">
 <title>eBooks</title>
