move favicon to canonical URL

--- a/src/index.mustache
+++ b/src/index.mustache
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width">
 <meta name="theme-color" content="#303636">
 <link rel="stylesheet" href="static/ebook.css">
+<link rel="shortcut icon" href="favicon.ico">
 <link rel="manifest" href="/manifest.json">
 <title>eBooks</title>
 </head>
