--- a/src/template.mustache
+++ b/src/template.mustache
@@ -17,7 +17,7 @@
 {{/metadata}}
 <meta name="dc.type" content="Text" data-scheme="dc.DCMIType"/>
 <meta name="dc.format" content="application/xhtml+xml; charset=utf-8" data-scheme="dc.IMT"/>
-<link rel="shortcut icon" href="static/favicon.ico"/>
+<link rel="shortcut icon" href="favicon.ico"/>
 <link rel="dc.identifier" href="http://www.manuel-strehl.de/ebooks/{{enctitle}}"/>
 <link rel="dc.tableofContents" href="#Table_of_Contents"/>
 <link rel="schema.dc" href="http://purl.org/dc/terms/"/>
