--- a/src/index.mustache
+++ b/src/index.mustache
@@ -3,10 +3,16 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<meta name="theme-color" content="#303636">
-<link rel="stylesheet" href="static/ebook.css">
-<link rel="shortcut icon" href="favicon.ico">
+<link rel="stylesheet" href="/static/ebook.css">
 <link rel="manifest" href="/manifest.json">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#303636">
+<meta name="msapplication-TileColor" content="#303636">
+<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+<meta name="theme-color" content="#303636">
+<link rel="shortcut icon" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <title>eBooks</title>
 </head>
 <body>
